# rf-powermeter-pipico

./: .gitmodules  readme.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yaml  cmake.yml  tests.yaml
src/: .clang-format  .gitignore  CMakeLists.txt  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  main.c  main.cpp
src/gitmodules/: readme.md
src/lib/: readme.md
src/lib/ad7887/: AD7887.cpp  AD7887.h  registers.cpp  registers.h
src/lib/ad8318/: AD8318.cpp  AD8318.h  Converter3rdOrder.cpp  Converter3rdOrder.h  KValues3rdOrder.hpp
src/lib/adc/: conversion.h
src/lib/average/: AverageT.hpp
src/lib/sample_data/: Average.h  AverageT.hpp  TransactionBuffer.cpp  TransactionBuffer.h  TransactionBufferT.hpp  TransactionData.h
src/lib/si/: si.h  si_types.h
src/lib/si_units/: SiUnit.h  si_unit_type.cpp  si_unit_type.h
src/lib/types/: cast.h
src/modules/: readme.md
src/modules/ad7887/: ad7887.cpp  ad7887.h  ad7887_hw_config.h  ad7887_types.h
src/modules/core0_ui/: core0_main.cpp  core0_main.h  ui.cpp  ui.h
src/modules/core1_sampler/: core1_main.cpp  core1_main.h
src/modules/globals/: cast.h  globals.c  globals.h
src/modules/lvgl/: lv_display.cpp  lv_display.h  lv_input.cpp  lv_input.h  lv_port_disp.c  lv_port_disp.cpp  lv_port_disp.h  lv_port_indev.c  lv_port_indev.cpp  lv_port_indev.h
src/modules/main_sampler/: main.cpp  main.h
src/modules/main_ui/: image_data.c  main.cpp  main.h  ui.cpp  ui.h
src/modules/periphery/: buttons.c  buttons.h  buzzer.c  buzzer.h  joystick.c  joystick.h  leds.c  leds.h
src/modules/periphery/display/: display.cpp  display.h  display_config.h  display_hw_config.h  display_types.h
src/modules/periphery/input/: buttons.c  buttons.cpp  buttons.h  buttons_hw_config.h  buttons_types.h  input.cpp  input.h  joystick.c  joystick.cpp  joystick.h  joystick_hw_config.h  joystick_types.h
src/modules/periphery/led/: user_led.c  user_led.cpp  user_led.h  user_led_hw_config.h
src/modules/periphery/ws2812/: rgbw.c  rgbw.h
src/modules/rf_power_meter/: KValues3rdOrder.hpp  converter.h  converter_config.h  converter_types.h
src/modules/ws2812/: rgbw.c  rgbw.h
src/scripts/: build-upload-openocd.sh  cmake-build.sh  cmake-make.sh  cmake.sh  devcie-reset-openocd.sh  device-reset.sh  gdb-client.sh  gdb-server.sh  git-submodule-init.sh  git-submodules-init.sh  install-build-prerequisites-ubuntu.sh  install-prerequisites-ubuntu.sh  install-tests-prerequisites-ubuntu.sh  make-upload-openocd.sh  make.sh  monitor.sh  picotool-info.sh  reset.sh  serial-monitor.sh  upload-openocd.sh
src/scripts/openocd/: adapter-speed.cfg  rp2040-cmsis-dap.cfg  rp2350-cmsis-dap.cfg
src/src/ws2812/: rgbw.c
src/tests/unit/: CMakeLists.txt
src/tests/unit/sampling/: average.cpp
src/tests/unit/scripts/: cmake.sh  make.sh  run.sh  test.sh
